# utility-backend

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml
proptest-regressions/tariffs/: math.txt
src/: lib.rs  main.rs
src/api/: handlers.rs  metrics.rs  middleware.rs  mod.rs  router.rs
src/gateway/: crypto.rs  lock.rs  mod.rs  mtls.rs  parser.rs  stream.rs  telemetry.rs
src/soroban/: mod.rs  preflight.rs  rpc.rs  sequencer.rs  sync.rs  tx_state.rs
src/tariffs/: engine.rs  math.rs
src/time_series/: analytics.rs  compress.sql  drift.rs  mod.rs  pool.rs
tests/: api_tests.rs  gateway_tests.rs  load_runner.rs  mod.rs  soroban_tests.rs  tariffs_tests.rs  time_series_tests.rs
