[package]
name = "utility-backend"
version = "0.1.0"
edition = "2021"
description = "Enterprise utility telemetry ingestion, tariff evaluation, and blockchain settlement backend"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = "0.14"
thiserror = "1"
anyhow = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
bytes = "1"
futures = "0.3"
parking_lot = "0.12"
dashmap = "5"
deadpool-postgres = { version = "0.12", default-features = false, features = ["rt_tokio_1"] }
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rustls = "0.22"
rustls-pemfile = "2"
x509-parser = "0.16"
tokio-rustls = "0.25"
fixed = "1.23"
async-trait = "0.1"
backoff = { version = "0.4", features = ["tokio"] }
tokio-stream = "0.1"
lru = "0.12"
criterion = { version = "0.5", optional = true }

[dev-dependencies]
axum-test = "14"
proptest = "1"
criterion = "0.5"
rand = "0.8"

[features]
default = []

[lib]
name = "utility_backend"
path = "src/lib.rs"


